[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/ai/check_nodes/bt_gun_cooldown.gd" type="Script" id=2]
[ext_resource path="res://core/ai/action_nodes/bt_shoot.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters/body.gd" type="Script" id=4]
[ext_resource path="res://scenes/sensors/direct_player_sight/direct_player_sight.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/ai/behavior_tree.gd" type="Script" id=6]
[ext_resource path="res://core/ai/action_nodes/bt_select_random_target.gd" type="Script" id=7]
[ext_resource path="res://core/ai/flow_nodes/bt_selector.gd" type="Script" id=8]
[ext_resource path="res://core/ai/flow_nodes/bt_sequence.gd" type="Script" id=9]
[ext_resource path="res://core/ai/action_nodes/bt_wait_random.gd" type="Script" id=10]
[ext_resource path="res://core/ai/check_nodes/bt_player_sensor.gd" type="Script" id=11]
[ext_resource path="res://core/ai/action_nodes/bt_go_to_target.gd" type="Script" id=12]
[ext_resource path="res://core/ai/check_nodes/bt_approach_distance.gd" type="Script" id=13]
[ext_resource path="res://core/ai/action_nodes/bt_look_at_target.gd" type="Script" id=14]
[ext_resource path="res://resources/models/characters/cultists/cultist_neophyte/CultistNeophyteNoCape.glb" type="PackedScene" id=15]
[ext_resource path="res://scenes/sensors/sound_listener.tscn" type="PackedScene" id=16]
[ext_resource path="res://core/ai/check_nodes/bt_sound_listener.gd" type="Script" id=17]
[ext_resource path="res://scenes/characters/cultists/cultist.gd" type="Script" id=18]
[ext_resource path="res://core/ai/check_nodes/bt_inventory_has_ammo.gd" type="Script" id=19]
[ext_resource path="res://core/ai/check_nodes/bt_gun_has_ammo.gd" type="Script" id=20]
[ext_resource path="res://core/ai/action_nodes/bt_reload_gun.gd" type="Script" id=21]
[ext_resource path="res://core/ai/check_nodes/bt_collision_sensor.gd" type="Script" id=22]
[ext_resource path="res://scenes/sensors/touch_sensor.tscn" type="PackedScene" id=23]

[sub_resource type="CapsuleShape" id=6]
radius = 0.4

[node name="Cultist" instance=ExtResource( 1 )]
script = ExtResource( 18 )
max_health = 40
move_speed = 1.5
acceleration = 5.0
mass = 70.0
_legcast = NodePath("Legs/Feet")

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.947582, -0.158151 )
shape = SubResource( 6 )

[node name="MainHandEquipmentRoot" parent="." index="3"]
unique_name_in_owner = false
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0.2, 1.2, -0.3 )

[node name="BehaviorTree" type="Node" parent="." index="5"]
script = ExtResource( 6 )
bt_root = NodePath("BT_Selector")

[node name="BT_Selector" type="Node" parent="BehaviorTree" index="0"]
script = ExtResource( 8 )

[node name="BT_Sequence_Active" type="Node" parent="BehaviorTree/BT_Selector" index="0"]
script = ExtResource( 9 )

[node name="BT_Selector_Sensor" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active" index="0"]
script = ExtResource( 8 )

[node name="BT_Collision_Sensor2" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Selector_Sensor" index="0"]
script = ExtResource( 22 )
sensor = NodePath("../../../../../Body/TouchSensor")

[node name="BT_Player_Sensor" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Selector_Sensor" index="1"]
script = ExtResource( 11 )
sensor = NodePath("../../../../../Body/DirectPlayerSight")

[node name="BT_Sound_Listener" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Selector_Sensor" index="2"]
script = ExtResource( 17 )
direct_player_sight = NodePath("../../../../../Body/DirectPlayerSight")
listener = NodePath("../../../../../Body/SoundListener")

[node name="BT_Sequence" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active" index="1"]
script = ExtResource( 9 )

[node name="BT_Selector_Ammo" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="0"]
script = ExtResource( 8 )

[node name="BT_Gun_Has_Ammo" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence/BT_Selector_Ammo" index="0"]
script = ExtResource( 20 )

[node name="BT_Inventory_Has_Ammo" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence/BT_Selector_Ammo" index="1"]
script = ExtResource( 19 )

[node name="BT_Reload_Gun" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence/BT_Selector_Ammo" index="2"]
script = ExtResource( 21 )

[node name="BT_Selector" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="1"]
script = ExtResource( 8 )

[node name="BT_Approach_Random_Distance" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence/BT_Selector" index="0"]
script = ExtResource( 13 )
listener = NodePath("../../../../../../Body/SoundListener")

[node name="BT_Go_To_Target" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence/BT_Selector" index="1"]
script = ExtResource( 12 )

[node name="BT_Look_At_Target3" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="2"]
script = ExtResource( 14 )

[node name="BT_Wait_Random3" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="3"]
script = ExtResource( 10 )
max_time = 1.6
min_time = 0.8

[node name="BT_Gun_Cooldown" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="4"]
script = ExtResource( 2 )

[node name="BT_Look_At_Target2" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="5"]
script = ExtResource( 14 )

[node name="BT_Shoot" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="6"]
script = ExtResource( 3 )

[node name="BT_Wait_Random2" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence" index="7"]
script = ExtResource( 10 )
max_time = 1.6
min_time = 0.8

[node name="BT_Sequence_Idle" type="Node" parent="BehaviorTree/BT_Selector" index="1"]
script = ExtResource( 9 )

[node name="BT_Select_Random_Target" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Idle" index="0"]
script = ExtResource( 7 )

[node name="BT_Look_At_Target4" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Idle" index="1"]
script = ExtResource( 14 )

[node name="BT_Go_To_Target" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Idle" index="2"]
script = ExtResource( 12 )

[node name="BT_Wait_Random" type="Node" parent="BehaviorTree/BT_Selector/BT_Sequence_Idle" index="3"]
script = ExtResource( 10 )
max_time = 10.0
min_time = 5.0

[node name="Body" parent="." index="6"]
script = ExtResource( 4 )

[node name="TouchSensor" parent="Body" index="0" instance=ExtResource( 23 )]
character = NodePath("../..")

[node name="DirectPlayerSight" parent="Body" index="1" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6969, 0 )
character = NodePath("../..")

[node name="SoundListener" parent="Body" index="2" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60308, 0 )

[node name="CultistNeophyteNoCape" parent="Body" index="3" instance=ExtResource( 15 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Skeleton" parent="Body/CultistNeophyteNoCape/rig_deform" index="0"]
bones/137/bound_children = [ NodePath("MainHandAttachment") ]

[node name="MainHandAttachment" type="BoneAttachment" parent="Body/CultistNeophyteNoCape/rig_deform/Skeleton" index="1"]
transform = Transform( -0.82014, 0.560886, 0.114588, -0.0145037, -0.220466, 0.975331, 0.572294, 0.798236, 0.188868, -0.103657, 15.1075, 2.96151 )
bone_name = "DEF-hand.R"

[node name="MainHandEquipmentRoot" type="Position3D" parent="Body/CultistNeophyteNoCape/rig_deform/Skeleton/MainHandAttachment" index="0"]
unique_name_in_owner = true
transform = Transform( 9.87362, 1.35419, 1.75424, 0.863589, -2.93904, -9.23556, -0.25949, 9.87466, -2.73205, -0.564033, 0.868509, 0.234261 )

[node name="Hitbox" parent="." index="7" groups=["CHARACTER"]]
visible = true
collision_layer = 8

[node name="CollisionShape" parent="Hitbox" index="0"]
visible = false

[node name="Speech" parent="Audio" index="0"]
unit_db = 10.0
max_db = 6.0
max_distance = 12.0

[node name="AnimationPlayer" parent="." index="17"]
root_node = NodePath("../Body/CultistNeophyteNoCape")

[node name="AnimationTree" parent="." index="18"]
active = true
parameters/ADS_State/current = 2
parameters/Rifle_strafe_vector/blend_position = Vector2( 0, -0.0172414 )

[connection signal="character_detected" from="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Selector_Sensor/BT_Player_Sensor" to="Audio" method="_on_BT_Player_Sensor_character_detected"]
[connection signal="unseen_sound_heard" from="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Selector_Sensor/BT_Sound_Listener" to="Audio" method="_on_BT_Sound_Listener_unseen_sound_heard"]
[connection signal="fighting" from="BehaviorTree/BT_Selector/BT_Sequence_Active/BT_Sequence/BT_Shoot" to="Audio" method="_on_BT_Shoot_fighting"]
[connection signal="character_idled" from="BehaviorTree/BT_Selector/BT_Sequence_Idle/BT_Wait_Random" to="Audio" method="_on_BT_Wait_Random_character_idled"]

[editable path="Body/CultistNeophyteNoCape"]
